# clouddatastack.com

./: Makefile  README.md  pyproject.toml
docs/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js  workshop1.html  workshop2.html
docs/.doctrees/: environment.pickle  index.doctree  workshop1.doctree  workshop2.doctree
docs/_sources/: index.rst.txt
docs/_static/: custom.css
docs/benchmarking/: trino_query_engine.html
docs/benchmarks/: trino_query_engine.html
docs/company/: privacy-policy.html
docs/guides/: 01_analytics_engineering.html
docs/products/: agentic_workflows.html  dbt_pipelines.html  gdpr_pii.html  governance_monitor.html  image_lake.html  pii_tracer.html  rag.html  streaming_platform.html  web_analytics.html  web_analytics_elt.html  web_analytics_ingest.html  web_analytics_ingestor.html
docs/services/: 01_enterprise_data_platforms.html  02_ai_workflows.html  03_data_migrations.html
docs/stack/: 01_extraction.html  01_storage.html  02_compute.html  02_streaming.html  03_compute.html  03_storage.html  03_streaming.html  04_compute.html  04_orchestration.html  04_transformation.html  05_governance.html  05_orchestration.html  05_transformation.html  06_governance.html  06_orchestration.html  07_governance.html  08_ai_workflows.html  compute.html  data_storage.html  data_streaming.html  governanace.html  governance.html  orchestration.html  storage.html  streaming.html
docs/tools/: audit_guide.html  cost_calculator.html  (+4 more)
pages/: index.html
src/: conf.py  index.md  index.rst
(+326 files in other folders)
