[tool.poetry]
name = "clouddatastack-com"
version = "0.1.0"
description = ""
authors = ["Yuri Chernushenko <yuri@clouddatastack.com>"]
readme = "README.md"
packages = [{include = "clouddatastack"}]

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
